--- a/sketch-01/index.html
+++ b/sketch-01/index.html
@@ -12,5 +12,6 @@
 <body>
     <div id="viz"></div>
     <script type="module" src="script.js"></script>
+    <script src="https://unpkg.com/textures@1.2.0/dist/textures.js"></script>
 </body>
 </html>
