--- a/sketch-07/index.html
+++ b/sketch-07/index.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+
+
     <title>Sketch-07</title>
 </head>
 <body>
-    <div id="viz"></div>
+    <div id="viz" class="chart-container"></div>
     <script type="module" src="script.js"></script>
 </body>
 </html>
